# conquer3d

./: .gitignore  404.html  CMakeLists.txt  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  patch_mkdocs.py  patch_mkdocs2.py  pyproject.toml  release.py  setup.py
.agents/: AGENTS.md
.github/workflows/: docs.yml
api/creation/: index.html
api/data_structure/bvh/: index.html
api/data_structure/gsbvh/: index.html
api/data_structure/kdtree/: index.html
api/data_structure/mesh_bvh/: index.html
api/data_structure/pgsbvh/: index.html
conquer3d/: __init__.py
conquer3d/creation/: __init__.py  triangle_creation.py
conquer3d/csrc/: check.h  constants.h  pybind.cpp
conquer3d/data_structure/: __init__.py
conquer3d/ops/: __init__.py  distance.py  grid.py  marching_cubes.py
conquer3d/primitive/: gs.py  pgs.py
docs/: index.md
docs/api/: creation.md
docs/stylesheets/: extra.css
examples/: ds_bvh.ipynb  ds_kdtree.ipynb  ds_mesh.ipynb  gs_aabb.ipynb  pgs_aabb.ipynb  prim_gs_aabb.ipynb  prim_pgs_aabb.ipynb  prim_pgs_tangency_radii.ipynb
examples/distance/: chamfer_distance.ipynb
examples/gaussians/: gs_aabb.ipynb  pgs_aabb.ipynb  pgs_tangency_radii.ipynb
examples/mesh/: 01_basic_mesh_operations.ipynb  02_find_non_manifold_vertices.ipynb  03_self_intersection.ipynb  04_ray_intersection.ipynb  05_query_point_sdf.ipynb  06_fast_winding_number.ipynb
examples/spatial/: ds_kdtree.ipynb
geocutool/csrc/: check.h  constants.h  pybind.cpp
geocutool/data_structure/: __init__.py
geocutool/primitive/: gs.py  pgs.py
search/: search_index.json
(+82 files in other folders)
