[build-system]
requires = [
    "setuptools>=68.0", 
    "wheel",
    "pybind11-stubgen",
    "torch>=2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "conquer3d"
version = "0.2.1"
description = "Geometric Cuda Tool Box"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Do Hoang Khoi", email = "khoido8899@gmail.com"}
]
requires-python = ">=3.9"
keywords = ["geometry"]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
cuda = [
    "cuda-toolkit==12.8.2", # Fixed package name
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/KhoiDOO/conquer3d"
Repository = "https://github.com/KhoiDOO/conquer3d.git"
Documentation = "https://github.com/KhoiDOO/conquer3d#readme"
Issues = "https://github.com/KhoiDOO/conquer3d/issues"

[tool.setuptools.packages.find]
include = ["conquer3d*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
# Ensure the compiled C++/CUDA binaries and typing stubs are bundled into the wheel!
"conquer3d" = ["py.typed", "*.so", "*.pyd", "*.pyi", "*.dll"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true